# cf_dist_utils_rust

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
benches/: bench.rs
gaussian value at risk/base/: benchmark.json  raw.csv  sample.json  tukey.json
gaussian value at risk/new/: estimates.json  raw.csv  sample.json  tukey.json
gaussian value at risk/report/: index.html
gaussian variance/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
gaussian variance/new/: estimates.json  raw.csv  sample.json  tukey.json
gaussian variance/report/: index.html
report/: index.html
src/: lib.rs
