[package]
name = "cf_dist_utils"
version = "0.7.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/cf_dist_utils_rust"
repository = "https://github.com/phillyfan1138/cf_dist_utils_rust"
readme = "README.md"
license = "MIT"
description = "A library which has risk and distribution utilities."

[dependencies]
fang_oost = "0.13.7"
roots = "0.0.4"
num-complex = "0.2"
rayon = "1.0.1"

[dev-dependencies]
approx = "0.2.0"

[badges]
travis-ci = { repository = "phillyfan1138/cf_dist_utils_rust" }