[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
description = "A library which has risk and distribution utilities."
edition = "2018"
homepage = "https://github.com/danielhstahl/cf_dist_utils_rust"
license = "MIT"
name = "cf_dist_utils"
readme = "README.md"
repository = "https://github.com/danielhstahl/cf_dist_utils_rust"
version = "0.10.0"

[dependencies]
fang_oost = "0.15.0"
num-complex = "0.2"
rayon = "1.0.1"
roots = "0.0.5"
serde = "^1"
serde_derive = "^1"

[dev-dependencies]
approx = "0.2.0"
criterion = "0.3"

[[bench]]
harness = false
name = "bench"
